--- a/src/app/components/verse-text/verse-text.component.scss
+++ b/src/app/components/verse-text/verse-text.component.scss
@@ -8,6 +8,8 @@
   padding-right: 15px;
   padding-left: 15px;
 	padding-top: 10px;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
 
 .faText {
